--- a/promotion.yaml
+++ b/promotion.yaml
@@ -1,3 +1,37 @@
+server:
+  port: ${SERVER_PORT}
+
+app:
+  accounting:
+    url: ${ACCOUNTING_URL}
+  security:
+    url: ${SECURITY_URL}
+  profile:
+    url: ${PROFILE_URL}
+
 spring:
   application:
     name: promotion-service
+
+  datasource:
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+
+  liquibase:
+    change-log: db/changelog/db.changelog-master.yaml
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+#Нужно добавить настройку для всех проектов:
+#  server.error.include-message=always
