--- a/promotion-dev.yaml
+++ b/promotion-dev.yaml
@@ -1,1 +1,36 @@
+resilience4j:
+  circuitbreaker:
+    instances:
+      accounting-service:
+        failure-rate-threshold: 50
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state:
+          seconds: 5
+        sliding-window-type: count_based
+        sliding-window-size: 2
+        minimum-number-of-calls: 1
+        event-consumer-buffer-size: 10
+        register-health-indicator: true
+        permitted-number-of-calls-in-half-open-state: 3
+    circuit-breaker-aspect-order: 1
+  retry:
+    retry-aspect-order: 2
+    instances:
+      accounting-service:
+        max-attempts: 10
+        wait-duration:
+          seconds: 50
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: mapping, bus-refresh, bus-env, health, circuitbreakerevents, retry
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      show-details: always
+  health:
+    circuitbreakers:
+      enabled: true
