--- a/promotion-dev.yml
+++ b/promotion-dev.yml
@@ -1,25 +1,39 @@
 resilience4j:
   circuitbreaker:
+    circuit-breaker-aspect-order: 1
+    configs:
+      default:
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 5
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 2
+        wait-duration-in-open-state: 5s
+        permitted-number-of-calls-in-half-open-state: 3
+        event-consumer-buffer-size: 20
+        ignore-exceptions:
+          - by.javaguru.jdmik7.relocationservice.api.exception.ServiceBadRequestException
     instances:
       accounting-service:
-        failure-rate-threshold: 50
-        automatic-transition-from-open-to-half-open-enabled: true
-        wait-duration-in-open-state:
-          seconds: 5
-        sliding-window-type: count_based
-        sliding-window-size: 2
-        minimum-number-of-calls: 1
-        event-consumer-buffer-size: 10
-        register-health-indicator: true
-        permitted-number-of-calls-in-half-open-state: 3
-    circuit-breaker-aspect-order: 1
+        base-config: default
+      security-service:
+        base-config: default
+      profiler-service:
+        base-config: default
   retry:
     retry-aspect-order: 2
+    configs:
+      default:
+        max-attempts: 3
+        wait-duration: 10s
+        ignore-exceptions:
+          - by.javaguru.jdmik7.relocationservice.api.exception.ServiceBadRequestException
     instances:
       accounting-service:
-        max-attempts: 10
-        wait-duration:
-          seconds: 50
+        base-config: default
+      security-service:
+        base-config: default
+      profiler-service:
+        base-config: default
 
 management:
   endpoints:
