--- a/promotion-dev.yml
+++ b/promotion-dev.yml
@@ -7,7 +7,8 @@ resilience4j:
         sliding-window-size: 5
         failure-rate-threshold: 50
         minimum-number-of-calls: 2
-        wait-duration-in-open-state: 5s
+        wait-duration-in-open-state:
+          seconds: 5
         permitted-number-of-calls-in-half-open-state: 3
         event-consumer-buffer-size: 20
         ignore-exceptions:
