--- a/promotion.yml
+++ b/promotion.yml
@@ -12,6 +12,11 @@ app:
 spring:
   application:
     name: promotion-service
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:8079/realms/m.tyumentsev/protocol/openid-connect/certs  
 
   datasource:
     url: ${DATABASE_URL}
