Update and rename api-gateway.yml to gateway.yml

--- a/gateway.yml
+++ b/gateway.yml
@@ -8,9 +8,10 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8079/realms/m.tyumentsev/protocol/openid-connect/certs
+          jwk-set-uri: http://localhost:8079/realms/m.tyumentsev
   main:
     allow-bean-definition-overriding: true
+    web-application-type: reactive
 
   cloud:
     gateway:
