--- a/gateway.yml
+++ b/gateway.yml
@@ -11,7 +11,7 @@ spring:
           jwk-set-uri: http://localhost:8079/realms/m.tyumentsev
   main:
     allow-bean-definition-overriding: true
-    web-application-type: reactive
+    # web-application-type: reactive
 
   cloud:
     gateway:
