--- a/gateway.yml
+++ b/gateway.yml
@@ -8,10 +8,10 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8079/realms/m.tyumentsev
+          jwk-set-uri: http://localhost:8079/realms/m.tyumentsev/protocol/openid-connect/certs
   main:
     allow-bean-definition-overriding: true
-    # web-application-type: reactive
+    web-application-type: reactive
 
   cloud:
     gateway:
