--- a/gateway.yml
+++ b/gateway.yml
@@ -9,7 +9,7 @@ spring:
       resourceserver:
         jwt:
           # jwk-set-uri: http://localhost:8079/realms/m.tyumentsev/protocol/openid-connect/certs
-          jwk-set-uri: http://localhost:8079/realms/m.tyumentsev
+          issuer-uri: http://localhost:8079/realms/m.tyumentsev
   main:
     allow-bean-definition-overriding: true
     web-application-type: reactive
