--- a/accounting.yml
+++ b/accounting.yml
@@ -1,3 +1,12 @@
 spring:
   application:
     name: ACCOUNTING-SERVICE
+
+kafka:
+  topics:
+    accounting: ${ACCOUNTING_TOPIC}
+    promotion: ${PROMOTION_TOPIC}
+  topic-properties:
+    partitions: 3
+    replicas: 3
+    min-in-sync-replicas: 2
