--- a/accounting.yml
+++ b/accounting.yml
@@ -7,6 +7,10 @@ kafka:
     accounting: ${ACCOUNTING_TOPIC}
     promotion: ${PROMOTION_TOPIC}
   topic-properties:
+    name: ${ACCOUNTING_TOPIC}
     partitions: 3
     replicas: 3
     min-in-sync-replicas: 2
+  retry:
+    interval: 1000
+    max-attempts: 2
