--- a/accounting.yml
+++ b/accounting.yml
@@ -2,15 +2,16 @@ spring:
   application:
     name: ACCOUNTING-SERVICE
 
-kafka:
-  topics:
-    accounting: ${ACCOUNTING_TOPIC}
-    promotion: ${PROMOTION_TOPIC}
-  topic-properties:
-    name: ${ACCOUNTING_TOPIC}
-    partitions: 3
-    replicas: 3
-    min-in-sync-replicas: 2
-  retry:
-    interval: 1000
-    max-attempts: 2
+app:
+  kafka:
+    topics:
+      accounting: ${ACCOUNTING_TOPIC}
+      promotion: ${PROMOTION_TOPIC}
+    topic-properties:
+      name: ${ACCOUNTING_TOPIC}
+      partitions: 3
+      replicas: 3
+      min-in-sync-replicas: 2
+    retry:
+      interval: 1000
+      max-attempts: 2
