--- a/notification.yml
+++ b/notification.yml
@@ -2,14 +2,15 @@ spring:
   application:
     name: NOTIFICATION-SERVICE
 
-kafka:
-  topics:
-    notification: ${NOTIFICATION_TOPIC}
-  topic-properties:
-    name: ${NOTIFICATION_TOPIC}
-    partitions: 3
-    replicas: 3
-    min-in-sync-replicas: 2
-  retry:
-    interval: 1000
-    max-attempts: 2
+app:
+  kafka:
+    topics:
+      notification: ${NOTIFICATION_TOPIC}
+    topic-properties:
+      name: ${NOTIFICATION_TOPIC}
+      partitions: 3
+      replicas: 3
+      min-in-sync-replicas: 2
+    retry:
+      interval: 1000
+      max-attempts: 2
