--- a/security.yml
+++ b/security.yml
@@ -2,15 +2,16 @@ spring:
   application:
     name: SECURITY-SERVICE
 
-kafka:
-  topics:
-    security: ${SECURITY_TOPIC}
-    promotion: ${PROMOTION_TOPIC}
-  topic-properties:
-    name: ${SECURITY_TOPIC}
-    partitions: 3
-    replicas: 3
-    min-in-sync-replicas: 2
-  retry:
-    interval: 1000
-    max-attempts: 2
+app:
+  kafka:
+    topics:
+      security: ${SECURITY_TOPIC}
+      promotion: ${PROMOTION_TOPIC}
+    topic-properties:
+      name: ${SECURITY_TOPIC}
+      partitions: 3
+      replicas: 3
+      min-in-sync-replicas: 2
+    retry:
+      interval: 1000
+      max-attempts: 2
