--- a/accounting.yml
+++ b/accounting.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: ACCOUNTING-SERVICE
+  kafka:
+    consumer:
+      group-id: accounting-service-group
+      auto-offset-reset: latest   
 
 app:
   kafka:
