--- a/application.yml
+++ b/application.yml
@@ -24,6 +24,7 @@ spring:
         enable.idempotence: true
         max.in.flight.requests.per.connection: 5
     consumer:
+      isolation-level: read_committed
       key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
