--- a/promotion.yml
+++ b/promotion.yml
@@ -28,6 +28,8 @@ spring:
   application:
     name: promotion-service
   kafka:
+    producer:
+      transaction-id-prefix: promotion-service-${random.value}-
     consumer:
       group-id: accounting-service-group
       auto-offset-reset: latest  
