--- a/application.yml
+++ b/application.yml
@@ -13,8 +13,8 @@ spring:
     properties:
       spring.json.trusted.packages: ${TRUSTED_PACKAGES}
     producer:
-      key-serializer: "org.apache.kafka.common.serialization.UUIDSerializer"
-      value-serializer: "org.springframework.kafka.support.serializer.JsonSerializer"
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
       retries: 10
       properties:
