--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ spring:
     properties:
       spring.json.trusted.packages: ${TRUSTED_PACKAGES}
     producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      key-serializer: org.apache.kafka.common.serialization.UUIDSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
       retries: 10
