--- a/promotion.yml
+++ b/promotion.yml
@@ -22,7 +22,13 @@ app:
       min-in-sync-replicas: 2
     retry:
       interval: 1000
-      max-attempts: 2  
+      max-attempts: 2
+
+retryabletask:
+  scheduler:
+    delay-ms: 5000
+  batch-size: 100
+  timeout-in-seconds: 3600      
 
 spring:
   application:
@@ -32,7 +38,7 @@ spring:
       transaction-id-prefix: promotion-service-${random.value}-
     consumer:
       group-id: promotion-service-group
-      auto-offset-reset: earliest  
+      auto-offset-reset: earliest
   security:
     oauth2:
       resourceserver:
